fix(Rechtsgebiete.html): correct header alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,7 @@ p {
 }
 
 .lawlist {
+  padding: 0;
   list-style-type: none;
   border: none;
   line-height: 2.5;
